docs: write up the repeated-forceload freeze investigation and fix (Layer 8)
Re-verified every file touched by today's forceload-freeze work (both
committed and re-checked against the whole codebase for other references
to the changed symbols) before writing this up:
- Corrected two comments left stale by the investigation's own timeline
  (ForceLoadCommand's "known remaining gap" note still described the
  refuted GC-pause hypothesis; ChunkHolder's admit-gate comment implied
  the standing cap is always active, which is no longer true now that it
  defaults to off).
- Documented the CHUNK_GEN_ADMIT_BUDGET / CHUNK_GEN_ADMIT_INFLIGHT_CAP
  dependency (the cap is a silent no-op unless the rate is also enabled).

Docs: GEN_SPIKE.md gets Layer 8 (English, continuing its existing
numbered-layer structure) with the full investigation trail -- GC pauses,
cgroup throttling, and simple lock contention ruled out in turn with live
evidence, JFR's DistanceManager/LightEngine read initially taken as the
root cause and later shown to be misleading once the accumulation and
fresh-terrain hypotheses were directly tested and refuted, landing on the
actual conflation bug. NESTWORLD-ADMIN.md (Ukrainian) gets the chunk-gen/
forceload flag table it was missing entirely -- these flags existed only
in English javadoc and GEN_SPIKE.md before this.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011zPbQQS12T8wGkeRDm2ZQj